# apiserver-builder-alpha

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  CONTRIBUTING.md  Gopkg.toml  Makefile  Makefile.test  OWNERS  README.md  SECURITY_CONTACTS  VERSION  WORKSPACE  boilerplate.go.txt  glide.yaml  go.mod  go.mod.new  go.sum  load.bzl  repos.bzl  vendor.go
Formula/: apiserver-boot.rb
cmd/: BUILD.bazel  glide.yaml  go.mod  go.sum
cmd/apiregister-gen/: BUILD.bazel  main.go
cmd/apiregister-gen/generators/: BUILD.bazel  admission_generator.go  apis_generator.go  controller_generator.go  install_generator.go  package.go  parser.go  unversioned_generator.go  util.go  versioned_generator.go
cmd/apiserver/: BUILD.bazel  main.go
cmd/apiserver-boot/: BUILD.bazel  main.go
cmd/apiserver-boot/boot/: build.go  build_container.go  build_resource_config.go  create_resource.go  create_resource_group.go  create_resource_version.go  docs.go  generate.go  glide.go  init.go  run.go  run_in_cluster.go  util.go
cmd/apiserver-boot/boot/create/: BUILD.bazel  controller.go  controller_test_suite.go  controllertest.go  create.go  group.go  resource.go  subresource.go  util.go  version.go
cmd/apiserver-boot/boot/init_repo/: BUILD.bazel  glide.go  init.go  repo.go  template.go  vendor.go
cmd/apiserver-boot/boot/init_repo/templates/: api.doc.tpl  go.mod.tpl
cmd/apiserver-boot/boot/run/: BUILD.bazel  in_cluster.go  local.go  local_aggregated.go  run.go
cmd/apiserver-boot/boot/show/: cmd.go  cmd_apiserver.go  resource.go
cmd/apiserver-boot/boot/update/: BUILD.bazel  vendor.go
cmd/apiserver-boot/boot/util/: BUILD.bazel  repo.go  untar.go  util.go  x509.go
cmd/apiserver-boot/boot/version/: BUILD.bazel  version.go
cmd/apiserver-builder-release/: BUILD.bazel  main.go
cmd/controller-manager/: BUILD.bazel  main.go
cmd/kubebuilder/: main.go
cmd/kubebuilder-gen/: main.go
cmd/kubebuilder-gen/codegen/: generators.go  types.go
cmd/kubebuilder-gen/codegen/internal/parse/: apis.go  controllers.go  index.go  parser.go  validation.go
cmd/kubebuilder-gen/codegen/run/: generator.go
cmd/kubebuilder-gen/internal/controllergen/: controller.go  controllers.go  generator.go  informers.go
cmd/kubebuilder-gen/internal/resourcegen/: apis_generator.go  generator.go  install_generator.go  unversioned_generator.go  versioned_generator.go
cmd/kubebuilder-release/: main.go
cmd/kubebuilder-release/release/: build.go  install.go  main.go  tar.go  util.go  vendor.go
cmd/kubebuilder/create/: create.go
cmd/kubebuilder/create/resource/: controller.go  controllertest.go  dockerfile.go  example.go  group.go  resource.go  resourcetest.go  run.go  sample.go  sharedinformers.go  version.go
cmd/kubebuilder/create/util/: util.go
cmd/kubebuilder/init_repo/: apis.go  apiserver.go  bazel.go  controller.go  empty_package.go  init.go  installer.go  vendor.go
cmd/kubebuilder/initproject/: bazel.go  controller.go  empty_package.go  init.go  installer.go
cmd/kubebuilder/run/: local.go
cmd/kubebuilder/update/: vendor.go
cmd/kubebuilder/util/: util.go
example/basic/: .gitignore  BUILD.bazel  Makefile  PROJECT  build-tools.sh  go.mod  go.sum  install-kubebuilder.sh
example/basic/cmd/apiserver/: BUILD.bazel  main.go
example/basic/cmd/controller-manager/: BUILD.bazel  main.go
example/basic/cmd/manager/: main.go
example/basic/config/: aggregated-apiserver.yaml  apiserver.yaml  apiservice.yaml  controller-manager.yaml  etcd.yaml  rbac.yaml
example/basic/config/certificates/: apiserver.crt  apiserver.csr  apiserver.key  apiserver_ca.crt  apiserver_ca.key  apiserver_ca.srl
example/basic/controllers/storage/: suite_test.go  volumeclaim_controller.go
example/basic/docs/examples/miao/: miao.yaml
example/basic/pkg/: doc.go
example/basic/pkg/apis/: BUILD.bazel  doc.go
example/basic/pkg/apis/innsmouth/: BUILD.bazel  doc.go
example/basic/pkg/apis/kingsport/: BUILD.bazel  doc.go  festival_strategy.go
example/basic/pkg/apis/miskatonic/: BUILD.bazel  book_student_rest.go  campus_university_rest.go  doc.go  student_computer_rest.go  student_rest.go  university_strategy.go
example/basic/pkg/apis/olympus/: BUILD.bazel  doc.go  poseidon_strategy.go
example/basic/pkg/controller/: BUILD.bazel  add_festival.go  add_poseidon.go
example/basic/pkg/controller/festival/: festival_controller.go  festival_controller_suite_test.go  festival_controller_test.go
example/basic/pkg/controller/poseidon/: BUILD.bazel  poseidon_controller.go  poseidon_controller_suite_test.go  poseidon_controller_test.go
example/basic/pkg/openapi/: BUILD.bazel  doc.go
example/basic/pkg/webhook/: webhook.go
example/basic/plugin/admission/: initializer.go
example/basic/plugin/admission/deepone/: admission.go
example/basic/plugin/admission/festival/: admission.go
example/basic/sample/: festival.yaml  university.yaml  university_scale.json
example/podexec/: BUILD.bazel  Makefile  PROJECT  go.mod  go.sum
example/podexec/cmd/apiserver/: main.go
example/podexec/cmd/manager/: main.go
example/podexec/docs/examples/pod/: pod.yaml
example/podexec/pkg/apis/: doc.go
example/podexec/pkg/controller/: doc.go
example/podexec/sample/: pod.yaml
pkg/apis/: BUILD.bazel  doc.go  zz_generated.api.register.go
pkg/apis/simple/: BUILD.bazel  doc.go  zz_generated.api.register.go  zz_generated.deepcopy.go  zz_generated.defaults.go
pkg/apis/simple/install/: BUILD.bazel  doc.go  zz_generated.api.register.go
pkg/apis/simple/v1alpha1/: BUILD.bazel  doc.go  mycontroller_types.go  mycontroller_types_test.go  v1alpha1_suite_test.go  zz_generated.api.register.go  zz_generated.conversion.go  zz_generated.deepcopy.go
pkg/client/informers_generated/externalversions/: BUILD.bazel  factory.go  generic.go
pkg/controller/: BUILD.bazel  controller.go  doc.go  informers.go  zz_generated.api.register.go
pkg/controller/mycontroller/: BUILD.bazel  controller.go  controller_test.go  mycontroller_suite_test.go  zz_generated.api.register.go
pkg/controller/sharedinformers/: BUILD.bazel  doc.go  informers.go  zz_generated.api.register.go
(+472 files in other folders)
