load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:prefix sigs.k8s.io/apiserver-builder-alpha
# gazelle:proto disable
# gazelle:exclude vendor
# gazelle:exclude cmd/vendor
# gazelle:exclude example
# gazelle:exclude pkg
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

gazelle(
    name = "gazelle",
    command = "fix",
    args = [
        "-build_file_name",
        "BUILD,BUILD.bazel",
    ],
)

go_library(
    name = "go_default_library",
    srcs = ["vendor.go"],
    importpath = "sigs.k8s.io/apiserver-builder-alpha",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_openapi_loads//:go_default_library",
        "@com_github_kubernetes_incubator_reference_docs//gen-apidocs/generators:go_default_library",
        "@io_k8s_client_go//plugin/pkg/client/auth:go_default_library",
        "@io_k8s_sigs_controller_runtime//:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/client:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/controller:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/handler:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/manager/signals:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile:go_default_library",
        "@io_k8s_sigs_controller_runtime//pkg/source:go_default_library",
        "@io_k8s_sigs_controller_tools//pkg/util:go_default_library",
    ],
)
