# gazelle:prefix sigs.k8s.io/apiserver-builder-alpha
# gazelle:proto disable
# gazelle:exclude vendor
# gazelle:exclude cmd/vendor
# gazelle:exclude example
# gazelle:exclude pkg
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

gazelle(
    name = "gazelle",
    command = "fix",
    args = [
        "-build_file_name",
        "BUILD,BUILD.bazel",
    ],
)
