load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "apiserver-builder",
    srcs = [
        "//cmd/apiregister-gen",
        "//cmd/apiserver-boot",
        "@com_github_kubernetes_incubator_reference_docs//gen-apidocs",
        "@io_k8s_code_generator//cmd/client-gen",
        "@io_k8s_code_generator//cmd/conversion-gen",
        "@io_k8s_code_generator//cmd/deepcopy-gen",
        "@io_k8s_code_generator//cmd/defaulter-gen",
        "@io_k8s_code_generator//cmd/go-to-protobuf",
        "@io_k8s_code_generator//cmd/go-to-protobuf/protoc-gen-gogo",
        "@io_k8s_code_generator//cmd/informer-gen",
        "@io_k8s_code_generator//cmd/lister-gen",
        "@io_k8s_kube_openapi//cmd/openapi-gen",
    ],
    extension = "tar.gz",
    mode = "0755",
    package_dir = "bin",
)
