load("@rules_pkg//:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "apiserver-builder",
    srcs = [
        "//cmd/apiserver-boot",
        "@com_github_kubernetes_incubator_reference_docs//gen-apidocs",
        "//:mod",
    ],
    extension = "tar.gz",
    mode = "0755",
    package_dir = "bin",
    visibility = ["//visibility:public"],
)
