load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "sigs.k8s.io/apiserver-builder-alpha/cmd/apiregister-gen",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/apiregister-gen/generators:go_default_library",
        "@io_k8s_gengo//args:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

go_binary(
    name = "apiregister-gen",
    embed = [":go_default_library"],
    importpath = "sigs.k8s.io/apiserver-builder-alpha/cmd/apiregister-gen",
    visibility = ["//visibility:public"],
)
