load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "zz_generated.api.register.go",
    ],
    importpath = "github.com/kubernetes-incubator/apiserver-builder-example/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/controller/mycontroller:go_default_library",
        "//pkg/controller/sharedinformers:go_default_library",
        "//vendor/github.com/kubernetes-incubator/apiserver-builder/pkg/controller:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)
