load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "admission_generator.go",
        "apis_generator.go",
        "install_generator.go",
        "package.go",
        "parser.go",
        "unversioned_generator.go",
        "util.go",
        "versioned_generator.go",
    ],
    importpath = "sigs.k8s.io/apiserver-builder-alpha/cmd/apiregister-gen/generators",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_pkg_errors//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_gengo//args:go_default_library",
        "@io_k8s_gengo//generator:go_default_library",
        "@io_k8s_gengo//namer:go_default_library",
        "@io_k8s_gengo//types:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)
