load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "create.go",
        "group.go",
        "resource.go",
        "subresource.go",
        "util.go",
        "version.go",
    ],
    importpath = "sigs.k8s.io/apiserver-builder-alpha/cmd/apiserver-boot/boot/create",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/apiserver-boot/boot/util:go_default_library",
        "@com_github_markbates_inflect//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
        "@io_k8s_apimachinery//pkg/util/validation:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_sigs_kubebuilder//pkg/model/config:go_default_library",
        "@io_k8s_sigs_kubebuilder//pkg/model/resource:go_default_library",
        "@io_k8s_sigs_kubebuilder//pkg/plugin/v3/scaffolds:go_default_library",
    ],
)
