load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "init.go",
        "repo.go",
        "vendor.go",
    ],
    importpath = "sigs.k8s.io/apiserver-builder-alpha/cmd/apiserver-boot/boot/init_repo",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/apiserver-boot/boot/util:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@io_k8s_klog//:go_default_library",
        "@io_k8s_sigs_kubebuilder//pkg/scaffold:go_default_library",
        "@io_k8s_sigs_kubebuilder//pkg/scaffold/input:go_default_library",
        "@io_k8s_sigs_kubebuilder//pkg/scaffold/manager:go_default_library",
    ],
)
