load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "in_cluster.go",
        "local.go",
        "run.go",
    ],
    importpath = "sigs.k8s.io/apiserver-builder-alpha/cmd/apiserver-boot/boot/run",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/apiserver-boot/boot/build:go_default_library",
        "//cmd/apiserver-boot/boot/util:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)
