load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "update.go",
        "vendor.go",
    ],
    importpath = "sigs.k8s.io/apiserver-builder-alpha/cmd/apiserver-boot/boot/update",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/apiserver-boot/boot/init_repo:go_default_library",
        "@com_github_emicklei_go_restful//log:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
    ],
)
