load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    importpath = "sigs.k8s.io/apiserver-builder-alpha/cmd/apiserver-boot/boot/util",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/markbates/inflect:go_default_library"],
)
