load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    importpath = "sigs.k8s.io/apiserver-builder-alpha/cmd/apiserver-boot/boot/util",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_markbates_inflect//:go_default_library",
        "@io_k8s_apiserver//pkg/server:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)
