load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["interface.go"],
    importpath = "github.com/kubernetes-incubator/apiserver-builder-example/pkg/client/informers_generated/internalversion/simple",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/client/informers_generated/internalversion/internalinterfaces:go_default_library",
        "//pkg/client/informers_generated/internalversion/simple/internalversion:go_default_library",
    ],
)
