load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "generated_expansion.go",
        "mycontroller.go",
        "simple_client.go",
    ],
    importpath = "github.com/kubernetes-incubator/apiserver-builder-example/pkg/client/clientset_generated/internalclientset/typed/simple/internalversion",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/simple:go_default_library",
        "//pkg/client/clientset_generated/internalclientset/scheme:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)
